# compiler_frontend

./: .gitignore  CMakeLists.txt
include/: ast.hpp  code_generator.hpp  generic_table.hpp  global_context.hpp  lexer.hpp  operator_table.hpp  parser.hpp  scope.hpp  semantic_analyzer.hpp  tables.hpp  type_table.hpp  types.hpp
include/ast/: binary.hpp  block.hpp  call.hpp  character_literal.hpp  expression.hpp  floating_literal.hpp  function.hpp  implicit_cast.hpp  integer_literal.hpp  literal.hpp  string_literal.hpp  type.hpp  variable.hpp  visitor.hpp
include/lexer/: lexer.hpp
include/type/: function_type.hpp  integer_type.hpp  signed_integer_type.hpp  type.hpp  unsigned_integer_type.hpp
src/: ast.cpp  code_generator.cpp  global_context.cpp  lexer.cpp  main.cpp  operator_table.cpp  parser.cpp  scope.cpp  semantic_analyzer.cpp  type_table.cpp
src/ast/: binary.cpp  block.cpp  call.cpp  character_literal.cpp  expression.cpp  floating_literal.cpp  function.cpp  implicit_cast.cpp  integer_literal.cpp  string_literal.cpp  type.cpp  variable.cpp
src/lexer/: lexer.cpp
src/type/: function_type.cpp  integer_type.cpp  signed_integer_type.cpp  type.cpp  unsigned_integer_type.cpp
